# PracticeCPP

./: .replit  functions.h  node.h
PhoneBook/: CMakeLists.txt  functions.h  node.h
PhoneBook/src/: main.cpp  record.h
